@@ -20,6 +20,7 @@
 
 #include "Add.h"
 
+#include "cli/Generate.h"
 #include "cli/TextStream.h"
 #include "cli/Utils.h"
 #include "core/Database.h"
@@ -44,11 +45,6 @@ const QCommandLineOption Add::GenerateOption = QCommandLineOption(QStringList() 
                                                                                 << "generate",
                                                                   QObject::tr("Generate a password for the entry."));
 
-const QCommandLineOption Add::PasswordLengthOption =
-    QCommandLineOption(QStringList() << "l"
-                                     << "password-length",
-                       QObject::tr("Length for the generated password."),
-                       QObject::tr("length"));
 
 Add::Add()
 {
@@ -57,9 +53,19 @@ Add::Add()
     options.append(Add::UsernameOption);
     options.append(Add::UrlOption);
     options.append(Add::PasswordPromptOption);
-    options.append(Add::GenerateOption);
-    options.append(Add::PasswordLengthOption);
     positionalArguments.append({QString("entry"), QObject::tr("Path of the entry to add."), QString("")});
+
+    // Password generation options.
+    options.append(Add::GenerateOption);
+    options.append(Generate::PasswordLengthOption);
+    options.append(Generate::LowerCaseOption);
+    options.append(Generate::UpperCaseOption);
+    options.append(Generate::NumbersOption);
+    options.append(Generate::SpecialCharsOption);
+    options.append(Generate::ExtendedAsciiOption);
+    options.append(Generate::ExcludeCharsOption);
+    options.append(Generate::ExcludeSimilarCharsOption);
+    options.append(Generate::IncludeEveryGroupOption);
 }
 
 int Add::executeWithDatabase(QSharedPointer<Database> database, QSharedPointer<QCommandLineParser> parser)
@@ -72,12 +78,20 @@ int Add::executeWithDatabase(QSharedPointer<Database> database, QSharedPointer<Q
     const QString& databasePath = args.at(0);
     const QString& entryPath = args.at(1);
 
-    // Validating the password length here, before we actually create
-    // the entry.
-    QString passwordLength = parser->value(Add::PasswordLengthOption);
-    if (!passwordLength.isEmpty() && !passwordLength.toInt()) {
-        errorTextStream << QObject::tr("Invalid value for password length %1.").arg(passwordLength) << endl;
+    // Cannot use those 2 options at the same time!
+    if (parser->isSet(Add::GenerateOption) && parser->isSet(Add::PasswordPromptOption)) {
+        errorTextStream << QObject::tr("Cannot generate a password and prompt at the same time!") << endl;
         return EXIT_FAILURE;
+    }
+
+    // Validating the password generator here, before we actually create
+    // the entry.
+    QSharedPointer<PasswordGenerator> passwordGenerator;
+    if (parser->isSet(Add::GenerateOption)) {
+        passwordGenerator = Generate::createGenerator(parser);
+        if (passwordGenerator.isNull()) {
+            return EXIT_FAILURE;
+        }
     }
 
     Entry* entry = database->rootGroup()->addEntryWithPath(entryPath);
@@ -101,17 +115,7 @@ int Add::executeWithDatabase(QSharedPointer<Database> database, QSharedPointer<Q
         QString password = Utils::getPassword(parser->isSet(Command::QuietOption) ? Utils::DEVNULL : Utils::STDOUT);
         entry->setPassword(password);
     } else if (parser->isSet(Add::GenerateOption)) {
-        PasswordGenerator passwordGenerator;
-
-        if (passwordLength.isEmpty()) {
-            passwordGenerator.setLength(PasswordGenerator::DefaultLength);
-        } else {
-            passwordGenerator.setLength(passwordLength.toInt());
-        }
-
-        passwordGenerator.setCharClasses(PasswordGenerator::DefaultCharset);
-        passwordGenerator.setFlags(PasswordGenerator::DefaultFlags);
-        QString password = passwordGenerator.generatePassword();
+        QString password = passwordGenerator->generatePassword();
         entry->setPassword(password);
     }
 
